--- a/simplehtml.html
+++ b/simplehtml.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>My Website</title>
+    <title>My Website!</title>
   </head>
   <body>
     <h1>Welcome to My Website</h1>
