--- a/simplehtml.html
+++ b/simplehtml.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="stylesheet" href="/documents/sites/test1/try 1.css">
     <title>My Website!</title>
   </head>
   <body>
