--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>My Website!</title>
   </head>
   <body>
+    <link rel="stylesheet" href="try 1.css">
     <h1>Welcome to My Website</h1>
     <p>Here is some content on my website.</p>
     <ul>
