--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <html>
   <head>
-    <title>My Website!</title>
+    <title>shade
+    </title>
   </head>
   <body>
-    <div id="text">penis</div>
+    <div class="image-container">
+      <img src="c:\Users\Schol\Desktop\mck-glitch-regular.png" alt=""-->
+      <img src="c:\Users\Schol\Desktop\mck-glitch-regular (1).png" alt="">
+      <img src="c:\Users\Schol\Desktop\mck-glitch-regular (2).png" alt="">
+      <img src="c:\Users\Schol\Desktop\mck-glitch-regular (3).png" alt="">
+      <img src="c:\Users\Schol\Desktop\mck-glitch-regular (4).png" alt="">
+     
+      <script src="tween.umd.js"></script>
+    <script src="script1.js"></script>
     <link rel="stylesheet" href="try 1.css">
-    <h1>Welcome to My Website</h1>
-    <p> Here is some content on my website.</p>
-    <ul>
-      <li>Home</li>
-      <li>About</li>
-      <li>Contact</li>
-    </ul>
-    <p>Click <a href="https://www.example.com">here</a> to visit a link.</p>
   </body>
 </html>
