--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <img src="c:\Users\Schol\Desktop\mck-glitch-regular (3).png" alt="">
       <img src="c:\Users\Schol\Desktop\mck-glitch-regular (4).png" alt="">
      
-      <script src="tween.umd.js"></script>
+      <!--script src="Tween.js"></script-->
     <script src="script1.js"></script>
-    <link rel="stylesheet" href="try 1.css">
+    <!--link rel="stylesheet" href="try 1.css">-->
   </body>
 </html>
